--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="0"
         app:layout_constraintTop_toBottomOf="@id/Resettotal"
-        app:layout_constraintBottom_toTopOf="@id/reset3"
+        app:layout_constraintBottom_toTopOf="@id/reset2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/augmento1"
         />
@@ -91,14 +91,13 @@
 
     <!-- Fila3 -->
 
-
     <TextView
         android:id="@+id/contador3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/contador2"
+        app:layout_constraintTop_toBottomOf="@id/reset2"
+        app:layout_constraintBottom_toTopOf="@id/reset4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/augmento3"
         />
@@ -108,7 +107,7 @@
         android:layout_height="wrap_content"
         android:text="+1"
         app:layout_constraintTop_toBottomOf ="@+id/augmento2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/augmento4"
         app:layout_constraintRight_toLeftOf="@id/reset3"
         app:layout_constraintLeft_toRightOf="@+id/contador3"/>
     <Button
@@ -117,7 +116,38 @@
         android:layout_height="wrap_content"
         android:text="Reset"
         app:layout_constraintTop_toBottomOf ="@+id/reset2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/reset4"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/augmento3"/>
+
+    <!-- Fila4 -->
+
+    <TextView
+        android:id="@+id/contador4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        app:layout_constraintTop_toBottomOf="@+id/reset3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/augmento4"
+        />
+    <Button
+        android:id="@+id/augmento4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+1"
+        app:layout_constraintTop_toBottomOf ="@+id/augmento3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/reset4"
+        app:layout_constraintLeft_toRightOf="@+id/contador4"/>
+    <Button
+        android:id="@+id/reset4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        app:layout_constraintTop_toBottomOf ="@+id/reset3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/augmento4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
